src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__while_let.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: WhileLet {
                                    label: None,
                                    pattern: Pattern {
                                        kind: TupleStruct {
                                            path: TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 19,
                                                                end: 23,
                                                                start_line: 1,
                                                                start_col: 20,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 19,
                                                    end: 23,
                                                    start_line: 1,
                                                    start_col: 20,
                                                },
                                            },
                                            fields: [
                                                Pattern {
                                                    kind: Ident {
                                                        by_ref: false,
                                                        mutable: false,
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 3,
                                                            },
                                                            span: Span {
                                                                start: 24,
                                                                end: 25,
                                                                start_line: 1,
                                                                start_col: 25,
                                                            },
                                                        },
                                                        subpattern: None,
                                                    },
                                                    span: Span {
                                                        start: 24,
                                                        end: 25,
                                                        start_line: 1,
                                                        start_col: 25,
                                                    },
                                                },
                                            ],
                                            rest_pos: None,
                                        },
                                        span: Span {
                                            start: 19,
                                            end: 26,
                                            start_line: 1,
                                            start_col: 20,
                                        },
                                    },
                                    scrutinee: Expr {
                                        kind: MethodCall {
                                            receiver: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 4,
                                                                    },
                                                                    span: Span {
                                                                        start: 29,
                                                                        end: 33,
                                                                        start_line: 1,
                                                                        start_col: 30,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 29,
                                                            end: 33,
                                                            start_line: 1,
                                                            start_col: 30,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 29,
                                                    end: 33,
                                                    start_line: 1,
                                                    start_col: 30,
                                                },
                                            },
                                            method: Spanned {
                                                node: SymbolU32 {
                                                    value: 5,
                                                },
                                                span: Span {
                                                    start: 34,
                                                    end: 38,
                                                    start_line: 1,
                                                    start_col: 35,
                                                },
                                            },
                                            type_args: None,
                                            args: [],
                                        },
                                        span: Span {
                                            start: 29,
                                            end: 40,
                                            start_line: 1,
                                            start_col: 30,
                                        },
                                    },
                                    body: Block {
                                        statements: [],
                                        expr: Some(
                                            Expr {
                                                kind: Assign {
                                                    target: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 6,
                                                                            },
                                                                            span: Span {
                                                                                start: 43,
                                                                                end: 46,
                                                                                start_line: 1,
                                                                                start_col: 44,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 43,
                                                                    end: 46,
                                                                    start_line: 1,
                                                                    start_col: 44,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 43,
                                                            end: 46,
                                                            start_line: 1,
                                                            start_col: 44,
                                                        },
                                                    },
                                                    value: Expr {
                                                        kind: Binary {
                                                            op: Add,
                                                            left: Expr {
                                                                kind: Path(
                                                                    ExprPath {
                                                                        segments: [
                                                                            ExprPathSegment {
                                                                                name: Spanned {
                                                                                    node: SymbolU32 {
                                                                                        value: 6,
                                                                                    },
                                                                                    span: Span {
                                                                                        start: 49,
                                                                                        end: 52,
                                                                                        start_line: 1,
                                                                                        start_col: 50,
                                                                                    },
                                                                                },
                                                                                args: None,
                                                                            },
                                                                        ],
                                                                        span: Span {
                                                                            start: 49,
                                                                            end: 52,
                                                                            start_line: 1,
                                                                            start_col: 50,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 49,
                                                                    end: 52,
                                                                    start_line: 1,
                                                                    start_col: 50,
                                                                },
                                                            },
                                                            right: Expr {
                                                                kind: Path(
                                                                    ExprPath {
                                                                        segments: [
                                                                            ExprPathSegment {
                                                                                name: Spanned {
                                                                                    node: SymbolU32 {
                                                                                        value: 3,
                                                                                    },
                                                                                    span: Span {
                                                                                        start: 55,
                                                                                        end: 56,
                                                                                        start_line: 1,
                                                                                        start_col: 56,
                                                                                    },
                                                                                },
                                                                                args: None,
                                                                            },
                                                                        ],
                                                                        span: Span {
                                                                            start: 55,
                                                                            end: 56,
                                                                            start_line: 1,
                                                                            start_col: 56,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 55,
                                                                    end: 56,
                                                                    start_line: 1,
                                                                    start_col: 56,
                                                                },
                                                            },
                                                        },
                                                        span: Span {
                                                            start: 49,
                                                            end: 56,
                                                            start_line: 1,
                                                            start_col: 50,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 43,
                                                    end: 56,
                                                    start_line: 1,
                                                    start_col: 44,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 41,
                                            end: 58,
                                            start_line: 1,
                                            start_col: 42,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 58,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 60,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 60,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 60,
        start_line: 1,
        start_col: 1,
    },
}
