src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__while_loop.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: While {
                                    label: None,
                                    condition: Expr {
                                        kind: Binary {
                                            op: Gt,
                                            left: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 2,
                                                                    },
                                                                    span: Span {
                                                                        start: 15,
                                                                        end: 16,
                                                                        start_line: 1,
                                                                        start_col: 16,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 15,
                                                            end: 16,
                                                            start_line: 1,
                                                            start_col: 16,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 15,
                                                    end: 16,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                            right: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 0,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 19,
                                                            end: 20,
                                                            start_line: 1,
                                                            start_col: 20,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 19,
                                                    end: 20,
                                                    start_line: 1,
                                                    start_col: 20,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 15,
                                            end: 20,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                    body: Block {
                                        statements: [],
                                        expr: Some(
                                            Expr {
                                                kind: Assign {
                                                    target: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 2,
                                                                            },
                                                                            span: Span {
                                                                                start: 23,
                                                                                end: 24,
                                                                                start_line: 1,
                                                                                start_col: 24,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 23,
                                                                    end: 24,
                                                                    start_line: 1,
                                                                    start_col: 24,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 23,
                                                            end: 24,
                                                            start_line: 1,
                                                            start_col: 24,
                                                        },
                                                    },
                                                    value: Expr {
                                                        kind: Binary {
                                                            op: Sub,
                                                            left: Expr {
                                                                kind: Path(
                                                                    ExprPath {
                                                                        segments: [
                                                                            ExprPathSegment {
                                                                                name: Spanned {
                                                                                    node: SymbolU32 {
                                                                                        value: 2,
                                                                                    },
                                                                                    span: Span {
                                                                                        start: 27,
                                                                                        end: 28,
                                                                                        start_line: 1,
                                                                                        start_col: 28,
                                                                                    },
                                                                                },
                                                                                args: None,
                                                                            },
                                                                        ],
                                                                        span: Span {
                                                                            start: 27,
                                                                            end: 28,
                                                                            start_line: 1,
                                                                            start_col: 28,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 27,
                                                                    end: 28,
                                                                    start_line: 1,
                                                                    start_col: 28,
                                                                },
                                                            },
                                                            right: Expr {
                                                                kind: Literal(
                                                                    Literal {
                                                                        kind: Int {
                                                                            value: 1,
                                                                            suffix: None,
                                                                        },
                                                                        span: Span {
                                                                            start: 31,
                                                                            end: 32,
                                                                            start_line: 1,
                                                                            start_col: 32,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 31,
                                                                    end: 32,
                                                                    start_line: 1,
                                                                    start_col: 32,
                                                                },
                                                            },
                                                        },
                                                        span: Span {
                                                            start: 27,
                                                            end: 32,
                                                            start_line: 1,
                                                            start_col: 28,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 23,
                                                    end: 32,
                                                    start_line: 1,
                                                    start_col: 24,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 21,
                                            end: 34,
                                            start_line: 1,
                                            start_col: 22,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 34,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 36,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 36,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 36,
        start_line: 1,
        start_col: 1,
    },
}
